FIX: username in main settings page wrapped in link to profile page

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -302,3 +302,8 @@ button.balance-info {
     padding-bottom: 30px;
   }
 }
+
+.link-profile {
+  color: $main-color;
+  display: block;
+}
